# chat-ai

./: .gitignore  .ruff.toml  Makefile  README.md  launch.py  pyproject.toml
.github/workflows/: tests.yaml
artifacts/: default_model_configs.yaml  example_history.yaml  instructions.yaml  prompts.yaml  supported_models.yaml
client/: package-lock.json  package.json
client/src/: index.html
client/src/assets/: empty-chat-instructions.md
client/src/components/: attachment-manager.js  chat-view.js  context-manager.js  history-manager.js  instruction-manager.js  model-config-manager.js
client/src/main/: grpcClient.js  ipcHandlers.js
config/: logging.conf
electron-chat/: README.md  package-lock.json
electron-chat/src/: app.js  index.html
proto/: chat.proto
server/: async_merge.py  conversation_manager.py  grpc_service.py  model_config_manager.py  model_registry.py  resource_manager.py  supported_models.py  utilities.py  vector_db.py
server/agents/: context_strategy_agent.py
server/mcp_server/: functions_agent.py  mcp_fake_server_config.json  mcp_jupyter_config.json  utilities.py
server/models/: __init__.py  anthropic.py  base.py  openai.py
tests/: conftest.py  test_anthropic.py  test_async_merge.py  test_context_strategy_agent.py  test_conversation_manager.py  test_functions_agent.py  test_grpc_service.py  test_mcp_manager.py  test_mock_model_wrapper.py  test_model_base.py  test_model_config_manager.py  test_model_registry.py  test_openai.py  test_resource_manager.py  test_supported_models.py  test_utilities.py  test_vector_db.py
(+29 files in other folders)
